Fixed Minor Css Bug.

--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -6,7 +6,7 @@
 
 <!-- Template site title
    ================================================== -->
-<title>Login</title>
+<title>Change Password</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
