--- a/src/main/resources/templates/printIssueBicycleDetails.html
+++ b/src/main/resources/templates/printIssueBicycleDetails.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Bicycle Sharing:Admin</title>
+<title>Bicycle Sharing:Print Booking Details</title>
 <!-- Bootstrap Styles-->
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 <!-- FontAwesome Styles-->
