--- a/src/main/resources/templates/receiveConfirm.html
+++ b/src/main/resources/templates/receiveConfirm.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Bicycle Sharing:Wallet Balance</title>
+<title>Bicycle Sharing:Confirm Delivery</title>
 <!-- Bootstrap Styles-->
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 <!-- FontAwesome Styles-->
