--- a/src/main/resources/templates/requestsAndNotificatons.html
+++ b/src/main/resources/templates/requestsAndNotificatons.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Bicycle Sharing:Admin</title>
+<title>Bicycle Sharing:Requests</title>
 <!-- Bootstrap Styles-->
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 <!-- FontAwesome Styles-->
@@ -24,7 +24,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<h1 class="page-header">
-						Requests and notifications <small>From Managers</small>
+						Transfer Requests <small>From Managers</small>
 					</h1>
 				</div>
 			</div>
