--- a/src/main/resources/templates/userBookingHistory.html
+++ b/src/main/resources/templates/userBookingHistory.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <!-- Template site title
    ================================================== -->
-<title>Bicycle Sharing</title>
+<title>My Booking History</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
