--- a/src/main/resources/templates/printUserBookingDetails.html
+++ b/src/main/resources/templates/printUserBookingDetails.html
@@ -6,7 +6,7 @@
 
 <!-- Template site title
    ================================================== -->
-<title>Success</title>
+<title>Print Booking Details</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
