--- a/src/main/resources/templates/successRegister.html
+++ b/src/main/resources/templates/successRegister.html
@@ -5,7 +5,7 @@
 
 <!-- Template site title
    ================================================== -->
-<title>Success</title>
+<title>Registration Success</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
