--- a/src/main/resources/templates/updateUserDetails.html
+++ b/src/main/resources/templates/updateUserDetails.html
@@ -8,7 +8,7 @@
 <meta charset="utf-8" />
 <!-- Template site title
    ================================================== -->
-<title>Bicycle Sharing</title>
+<title>Update Details</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
