--- a/src/main/resources/templates/searchUsers.html
+++ b/src/main/resources/templates/searchUsers.html
@@ -14,7 +14,7 @@
 <!-- Custom Styles-->
 <link th:href="@{/css/admin-styles.css}" rel="stylesheet" />
 <!-- Google Fonts-->
-<link th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
+<link th:href="@{https://fonts.googleapis.com/css?family=Open+Sans}"
 	rel="stylesheet" type="text/css" />
 <style type="text/css">
 </style>
@@ -79,7 +79,7 @@
 	<!-- JS Scripts-->
 	<!-- jQuery Js -->
 	<script
-		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<!-- Bootstrap Js -->
 	<script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 	<!-- Metis Menu Js -->
