--- a/src/main/resources/templates/approvedRequests.html
+++ b/src/main/resources/templates/approvedRequests.html
@@ -10,7 +10,7 @@
 <!-- FontAwesome Styles-->
 <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
 <!-- Google Fonts-->
-<link th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
+<link th:href="@{https://fonts.googleapis.com/css?family=Open+Sans}"
 	rel="stylesheet" type="text/css" />
 <!-- TABLE STYLES-->
 <link th:href="@{/css/dataTables.bootstrap.css}" rel="stylesheet" />
@@ -64,7 +64,7 @@
 	<!-- JS Scripts-->
 	<!-- jQuery Js -->
 	<script
-		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<!-- Bootstrap Js -->
 	<script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 	<!-- Metis Menu Js -->
