--- a/src/main/resources/templates/bookingInUse.html
+++ b/src/main/resources/templates/bookingInUse.html
@@ -12,7 +12,7 @@
 <!-- Custom Styles-->
 <link th:href="@{/css/admin-styles.css}" rel="stylesheet" />
 <!-- Google Fonts-->
-<link th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
+<link th:href="@{https://fonts.googleapis.com/css?family=Open+Sans}"
 	rel="stylesheet" type="text/css" />
 <!-- TABLE STYLES-->
 <link th:href="@{/css/dataTables.bootstrap.css}" rel="stylesheet" />
