--- a/src/main/resources/templates/managerPayment.html
+++ b/src/main/resources/templates/managerPayment.html
@@ -23,7 +23,7 @@
 <!-- Custom Styles-->
 <link th:href="@{/css/admin-styles.css}" rel="stylesheet" />
 <!-- Google Fonts-->
-<link th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
+<link th:href="@{https://fonts.googleapis.com/css?family=Open+Sans}"
 	rel="stylesheet" type="text/css" />
 <!-- Main CSS
    	================================================== -->
